samples/_failures_safe/1761697155_ec4557_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7af0ef0a.c: In function ‘main’:
./samples/SAFE/__tmp_7af0ef0a.c:156:12: error: missing terminating " character
  156 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_7af0ef0a.c:156:5: error: expected expression at end of input
  156 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_7af0ef0a.c:156:5: error: expected declaration or statement at end of input
